--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,7 +59,7 @@
   "usage": "Usage",
   "requests-per-day": "Requests per day",
   "requests-per-day-description": "This is the limit of AI requests per day",
-  "resets-in": "Resets in",
+  "resets-in": "Resets in approximately",
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "tokens-per-minute": "Tokens per minute",
