--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,81 +1,81 @@
 {
-  "auto-import-dois": "DOIs automatisch importieren",
-  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
-  "general": "Allgemein",
-  "download-report-pdf": "Bericht als PDF herunterladen",
-  "valid-description": "Gültig",
-  "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
-  "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
-  "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
-  "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
-  "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
-  "open-work": "Werk öffnen",
-  "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
-  "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
-  "insert-dois": "DOIs oder einen Text mit DOIs eingeben",
-  "english": "Englisch",
-  "german": "Deutsch",
-  "language": "Sprache",
-  "language-option-description": "Wählen Sie die Sprache der Erweiterung",
-  "found": "Gefunden",
-  "valid": "Gültig",
-  "invalid": "Ungültig",
-  "report": "Bericht",
-  "copy-doi": "Kopieren",
-  "doi-copied": "Kopiert",
-  "theme": "Design",
-  "theme-option-description": "Wählen Sie das Design der Erweiterung",
-  "light": "Hell",
-  "dark": "Dunkel",
-  "system": "System",
-  "display": "Darstellung",
-  "no-valid-dois-were-found": "Keine DOIs gefunden",
-  "no-input-provided": "Keine Eingabe bereitgestellt",
-  "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
-  "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
-  "upload-pdf": "PDF-Datei importieren",
   "about": "Über uns",
-  "display-mode": "Anzeigemodus",
-  "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
-  "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
-  "website": "Webseite",
-  "visit-website": "Webseite besuchen",
-  "view-github": "Projekt auf GitHub ansehen",
-  "contact": "Kontakt",
-  "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
-  "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
-  "help": "Hilfe",
-  "sth-went-wrong": "Etwas ist schief gelaufen",
+  "about-description": "Erfahre mehr über die Extension.",
+  "ai": "KI",
+  "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen.",
   "ai-extraction": "KI-Extraktion",
   "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet,um DOIs aus dem Eingabetext zu extrahieren. Dadurch können DOIs auch dann zuverlässig erkannt werden, wenn sie nicht korrekt formatiert sind",
   "ai-extraction-description-info": "Bitte beachten Sie, dass Google Gemini ein Drittanbieter-Dienst ist. Vermeiden Sie es daher, sensible oder vertrauliche Daten einzugeben, da diese an den Dienst gesendet werden könnten. Für weitere Informationen klicken Sie hier: ",
-  "learn-more": "Mehr erfahren",
-  "test-api-key": "API-Schlüssel testen",
-  "api-key-valid": "Gültig",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
+  "api-key-valid": "Gültig",
+  "appearance": "Aussehen",
+  "appearance-description": "Passe das Erscheinungsbild der Extension an.",
+  "auto-import-dois": "DOIs automatisch importieren",
+  "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
+  "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
+  "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
+  "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
+  "contact": "Kontakt",
+  "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
+  "copy-doi": "Kopieren",
   "create-one-here": "hier erstellen",
-  "ai": "KI",
-  "usage": "Nutzung",
+  "dark": "Dunkel",
+  "display": "Darstellung",
+  "display-mode": "Anzeigemodus",
+  "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
+  "doi-copied": "Kopiert",
+  "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
+  "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
+  "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
+  "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
+  "download-report-pdf": "Bericht als PDF herunterladen",
+  "english": "Englisch",
+  "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
+  "found": "Gefunden",
+  "general": "Allgemein",
+  "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension.",
+  "german": "Deutsch",
+  "help": "Hilfe",
+  "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen.",
+  "hr": "h",
+  "insert-dois": "DOIs oder einen Text mit DOIs eingeben",
+  "invalid": "Ungültig",
+  "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
+  "language": "Sprache",
+  "language-description": "Stelle die Sprache ein.",
+  "language-option-description": "Wählen Sie die Sprache der Erweiterung",
+  "learn-more": "Mehr erfahren",
+  "light": "Hell",
+  "min": "min",
+  "no-input-provided": "Keine Eingabe bereitgestellt",
+  "no-valid-dois-were-found": "Keine DOIs gefunden",
+  "open-work": "Werk öffnen",
+  "pdf-file": "PDF-Datei",
+  "popup": "Popup",
+  "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
+  "report": "Bericht",
   "requests-per-day": "Anfragen pro Tag",
   "requests-per-day-description": "Dies ist das Limit der KI-Anfragen pro Tag",
-  "resets-in": "Wird zurückgesetzt in ca.",
   "requests-per-minute": "Anfragen pro Minute",
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
-  "tokens-per-minute": "Token pro Minute",
-  "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
-  "hr": "h",
-  "min": "min",
+  "resets-in": "Wird zurückgesetzt in ca.",
   "sec": "s",
   "side-panel": "Seitenleiste",
-  "popup": "Popup",
-  "appearance": "Aussehen",
   "source-code": "Quellcode",
-  "appearance-description": "Passe das Erscheinungsbild der Extension an.",
-  "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen.",
-  "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension.",
-  "language-description": "Stelle die Sprache ein.",
-  "about-description": "Erfahre mehr über die Extension.",
-  "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen.",
-  "pdf-file": "PDF-Datei"
+  "sth-went-wrong": "Etwas ist schief gelaufen",
+  "system": "System",
+  "test-api-key": "API-Schlüssel testen",
+  "theme": "Design",
+  "theme-option-description": "Wählen Sie das Design der Erweiterung",
+  "tokens-per-minute": "Token pro Minute",
+  "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "upload-pdf": "PDF-Datei importieren",
+  "usage": "Nutzung",
+  "valid": "Gültig",
+  "valid-description": "Gültig",
+  "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
+  "view-github": "Projekt auf GitHub ansehen",
+  "visit-website": "Webseite besuchen",
+  "website": "Webseite"
 }
