--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,81 +1,81 @@
 {
-  "auto-import-dois": "Auto-import DOIs",
-  "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
-  "general": "General",
-  "download-report-pdf": "Download report as PDF",
-  "valid-description": "Valid",
-  "invalid-description": "Invalid. Please check the DOI for accuracy",
-  "doi-not-found": "The DOI was not found. Possible reasons are:",
-  "doi-incorrect": "The DOI is incorrect in your source",
-  "doi-incorrect-extracted": "The DOI was extracted incorrectly",
-  "doi-not-activated": "The DOI has not been activated yet",
-  "open-work": "Open Work",
-  "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
-  "reload-page-auto-import": "Reload the page to automatically import DOIs, or enter DOIs or a text containing DOIs",
-  "insert-dois": "Enter DOIs or a text containing DOIs",
-  "english": "English",
-  "german": "German",
-  "language": "Language",
-  "language-option-description": "Select the language of the extension",
-  "found": "Found",
-  "valid": "Valid",
-  "invalid": "Invalid",
-  "report": "Report",
-  "copy-doi": "Copy",
-  "doi-copied": "Copied",
-  "theme": "Theme",
-  "theme-option-description": "Select the theme of the extension",
-  "light": "Light",
-  "dark": "Dark",
-  "system": "System",
-  "display": "Display",
-  "no-valid-dois-were-found": "No DOIs found",
-  "no-input-provided": "No Input Provided",
-  "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
-  "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
-  "upload-pdf": "Import PDF",
   "about": "About",
-  "display-mode": "Display Mode",
-  "display-mode-description": "Select the display mode of the extension",
-  "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
-  "website": "Website",
-  "visit-website": "Visit Website",
-  "view-github": "View Project on GitHub",
-  "contact": "Contact",
-  "contact-email": "For questions or issues, you can reach us via email",
-  "view-demo": "View a demonstration of how to use the extension",
-  "help": "Help",
+  "about-description": "Learn more about the extension.",
+  "ai": "AI",
+  "ai-description": "Enable and configure AI-powered functionality.",
   "ai-extraction": "AI Extraction",
   "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from your input text",
   "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Therefore, avoid entering sensitive or confidential data, as it may be sent to the service. For more information, click here:",
-  "learn-more": "Learn more",
-  "sth-went-wrong": "Something went wrong",
-  "test-api-key": "Test API Key",
-  "api-key-valid": "Valid",
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
+  "api-key-valid": "Valid",
+  "appearance": "Appearance",
+  "appearance-description": "Adjust the appearance of the extension.",
+  "auto-import-dois": "Auto-import DOIs",
+  "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
+  "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
+  "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
+  "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
+  "contact": "Contact",
+  "contact-email": "For questions or issues, you can reach us via email",
+  "copy-doi": "Copy",
   "create-one-here": "create one here",
-  "ai": "AI",
-  "usage": "Usage",
+  "dark": "Dark",
+  "display": "Display",
+  "display-mode": "Display Mode",
+  "display-mode-description": "Select the display mode of the extension",
+  "doi-copied": "Copied",
+  "doi-incorrect": "The DOI is incorrect in your source",
+  "doi-incorrect-extracted": "The DOI was extracted incorrectly",
+  "doi-not-activated": "The DOI has not been activated yet",
+  "doi-not-found": "The DOI was not found. Possible reasons are:",
+  "download-report-pdf": "Download report as PDF",
+  "english": "English",
+  "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
+  "found": "Found",
+  "general": "General",
+  "general-description": "Manage basic settings for the extension's functionality.",
+  "german": "German",
+  "help": "Help",
+  "help-description": "Get support and helpful resources.",
+  "hr": "hr",
+  "insert-dois": "Enter DOIs or a text containing DOIs",
+  "invalid": "Invalid",
+  "invalid-description": "Invalid. Please check the DOI for accuracy",
+  "language": "Language",
+  "language-description": "Set your language.",
+  "language-option-description": "Select the language of the extension",
+  "learn-more": "Learn more",
+  "light": "Light",
+  "min": "min",
+  "no-input-provided": "No Input Provided",
+  "no-valid-dois-were-found": "No DOIs found",
+  "open-work": "Open Work",
+  "pdf-file": "PDF File",
+  "popup": "Popup",
+  "reload-page-auto-import": "Reload the page to automatically import DOIs, or enter DOIs or a text containing DOIs",
+  "report": "Report",
   "requests-per-day": "Requests per day",
   "requests-per-day-description": "This is the limit of AI requests per day",
-  "resets-in": "Resets in approximately",
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
-  "tokens-per-minute": "Tokens per minute",
-  "tokens-per-minute-description": "This is the limit of AI tokens per minute",
-  "hr": "hr",
-  "min": "min",
+  "resets-in": "Resets in approximately",
   "sec": "sec",
   "side-panel": "Side Panel",
-  "popup": "Popup",
-  "appearance": "Appearance",
   "source-code": "Source Code",
-  "appearance-description": "Adjust the appearance of the extension.",
-  "help-description": "Get support and helpful resources.",
-  "general-description": "Manage basic settings for the extension's functionality.",
-  "language-description": "Set your language.",
-  "about-description": "Learn more about the extension.",
-  "ai-description": "Enable and configure AI-powered functionality.",
-  "pdf-file": "PDF File"
+  "sth-went-wrong": "Something went wrong",
+  "system": "System",
+  "test-api-key": "Test API Key",
+  "theme": "Theme",
+  "theme-option-description": "Select the theme of the extension",
+  "tokens-per-minute": "Tokens per minute",
+  "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "upload-pdf": "Import PDF",
+  "usage": "Usage",
+  "valid": "Valid",
+  "valid-description": "Valid",
+  "view-demo": "View a demonstration of how to use the extension",
+  "view-github": "View Project on GitHub",
+  "visit-website": "Visit Website",
+  "website": "Website"
 }
