feat: add AI usage indicator

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -77,5 +77,6 @@
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
-  "website": "Webseite"
+  "website": "Webseite",
+  "ai-used": "DOIs mit KI extrahiert"
 }
