--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,5 +77,6 @@
   "view-demo": "View a demonstration of how to use the extension",
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
-  "website": "Website"
+  "website": "Website",
+  "ai-used": "DOIs extracted with AI"
 }
