refactor(localization): update AI extraction descriptions and add request limit notice

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,8 +4,9 @@
   "ai": "KI",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen.",
   "ai-extraction": "KI-Extraktion",
-  "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet,um DOIs aus dem Eingabetext zu extrahieren. Dadurch können DOIs auch dann zuverlässig erkannt werden, wenn sie nicht korrekt formatiert sind",
-  "ai-extraction-description-info": "Bitte beachten Sie, dass Google Gemini ein Drittanbieter-Dienst ist. Vermeiden Sie es daher, sensible oder vertrauliche Daten einzugeben, da diese an den Dienst gesendet werden könnten. Für weitere Informationen klicken Sie hier: ",
+  "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet, um DOIs aus der Eingabe zu extrahieren. Dadurch können DOIs oft genauer erkannt werden als mit der Standardmethode.",
+  "ai-extraction-description-info": "Bitte beachte, dass Google Gemini ein Drittanbieterdienst ist. Vermeide daher die Eingabe sensibler oder vertraulicher Daten, da diese an den Dienst gesendet werden. ",
+  "ai-extraction-description-limit": "⚠ Hinweis: Die Anzahl der Anfragen an Google Gemini ist begrenzt. Wenn das Limit erreicht ist, wird die Standardmethode verwendet.",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
