--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,8 +4,9 @@
   "ai": "AI",
   "ai-description": "Enable and configure AI-powered functionality.",
   "ai-extraction": "AI Extraction",
-  "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from your input text",
-  "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Therefore, avoid entering sensitive or confidential data, as it may be sent to the service. For more information, click here:",
+  "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from the input. This often allows for more accurate DOI recognition compared to the standard method.",
+  "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Avoid entering sensitive or confidential data, as it will be sent to the service.",
+  "ai-extraction-description-limit": "⚠ Note: The number of requests to Google Gemini is limited. Once the limit is reached, the standard method will be used.",
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
