fix: update German and English translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1,18 +1,20 @@
 {
   "about": "Über uns",
-  "about-description": "Erfahre mehr über die Extension.",
+  "about-description": "Erfahre mehr über die Extension",
   "ai": "KI",
-  "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen.",
+  "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-extraction": "KI-Extraktion",
   "ai-extraction-description": "Wenn diese Option aktiviert ist, wird Google Gemini verwendet, um DOIs aus der Eingabe zu extrahieren. Dadurch können DOIs oft genauer erkannt werden als mit der Standardmethode.",
   "ai-extraction-description-info": "Bitte beachte, dass Google Gemini ein Drittanbieterdienst ist. Vermeide daher die Eingabe sensibler oder vertraulicher Daten, da diese an den Dienst gesendet werden. ",
   "ai-extraction-description-limit": "⚠ Hinweis: Die Anzahl der Anfragen an Google Gemini ist begrenzt. Wenn das Limit erreicht ist, wird die Standardmethode verwendet.",
+  "ai-model": "KI-Modell",
+  "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
   "ai-used": "DOIs mit KI extrahiert",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
   "appearance": "Aussehen",
-  "appearance-description": "Passe das Erscheinungsbild der Extension an.",
+  "appearance-description": "Passe das Erscheinungsbild der Extension an",
   "auto-import-dois": "DOIs automatisch importieren",
   "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
   "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
@@ -37,17 +39,20 @@
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "found": "Gefunden",
+  "gemini-2.0-flash-description": "Schnellere Ergebnisse, aber weniger genau und mehr Anfragen pro Minute möglich",
+  "gemini-2.0-flash-lite-description": "Schnellste Ergebnisse, aber am wenigsten genau und die meisten Anfragen pro Minute möglich",
+  "gemini-2.5-pro-description": "Beste Ergebnisse, aber langsam und wenige Anfragen pro Minute möglich",
   "general": "Allgemein",
-  "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension.",
+  "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension",
   "german": "Deutsch",
   "help": "Hilfe",
-  "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen.",
+  "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hr": "h",
   "insert-dois": "DOIs oder einen Text mit DOIs eingeben",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "language": "Sprache",
-  "language-description": "Stelle die Sprache ein.",
+  "language-description": "Stelle die Sprache ein",
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "learn-more": "Mehr erfahren",
   "light": "Hell",
@@ -58,6 +63,7 @@
   "open-work": "Werk öffnen",
   "pdf-file": "PDF-Datei",
   "popup": "Popup",
+  "recommended": "Empfohlen",
   "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
   "report": "Bericht",
   "requests-per-day": "Anfragen pro Tag",
@@ -83,11 +89,5 @@
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
-  "website": "Webseite",
-  "ai-model": "KI-Modell",
-  "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
-  "gemini-2.5-pro-description": "Beste Ergebnisse, aber langsam und wenige Anfragen pro Minute möglich",
-  "gemini-2.0-flash-description": "Schnellere Ergebnisse, aber weniger genau und mehr Anfragen pro Minute möglich",
-  "gemini-2.0-flash-lite-description": "Schnellste Ergebnisse, aber am wenigsten genau und die meisten Anfragen pro Minute möglich",
-  "recommended": "Empfohlen"
+  "website": "Webseite"
 }
