--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1,18 +1,20 @@
 {
   "about": "About",
-  "about-description": "Learn more about the extension.",
+  "about-description": "Learn more about the extension",
   "ai": "AI",
-  "ai-description": "Enable and configure AI-powered functionality.",
+  "ai-description": "Enable and configure AI-powered functionality",
   "ai-extraction": "AI Extraction",
   "ai-extraction-description": "When this option is enabled, Google Gemini is used to extract DOIs from the input. This often allows for more accurate DOI recognition compared to the standard method.",
   "ai-extraction-description-info": "Please note that Google Gemini is a third-party service. Avoid entering sensitive or confidential data, as it will be sent to the service.",
   "ai-extraction-description-limit": "⚠ Note: The number of requests to Google Gemini is limited. Once the limit is reached, the standard method will be used.",
+  "ai-model": "AI Model",
+  "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-used": "DOIs extracted with AI",
   "api-key-invalid": "Invalid",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
   "appearance": "Appearance",
-  "appearance-description": "Adjust the appearance of the extension.",
+  "appearance-description": "Adjust the appearance of the extension",
   "auto-import-dois": "Auto-import DOIs",
   "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
   "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
@@ -37,17 +39,20 @@
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "found": "Found",
+  "gemini-2.0-flash-description": "Faster results, but less accurate and more requests per minute possible",
+  "gemini-2.0-flash-lite-description": "Fastest results, but least accurate and most requests per minute possible",
+  "gemini-2.5-pro-description": "Best results, but slow and few requests per minute possible",
   "general": "General",
-  "general-description": "Manage basic settings for the extension's functionality.",
+  "general-description": "Manage basic settings for the extension's functionality",
   "german": "German",
   "help": "Help",
-  "help-description": "Get support and helpful resources.",
+  "help-description": "Get support and helpful resources",
   "hr": "hr",
   "insert-dois": "Enter DOIs or a text containing DOIs",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "language": "Language",
-  "language-description": "Set your language.",
+  "language-description": "Set your language",
   "language-option-description": "Select the language of the extension",
   "learn-more": "Learn more",
   "light": "Light",
@@ -58,6 +63,7 @@
   "open-work": "Open Work",
   "pdf-file": "PDF File",
   "popup": "Popup",
+  "recommended": "Recommended",
   "reload-page-auto-import": "Reload the page to automatically import DOIs, or enter DOIs or a text containing DOIs",
   "report": "Report",
   "requests-per-day": "Requests per day",
@@ -83,11 +89,5 @@
   "view-demo": "View a demonstration of how to use the extension",
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
-  "website": "Website",
-  "ai-model": "AI Model",
-  "ai-model-description": "Select the AI model to be used for the extraction.",
-  "gemini-2.5-pro-description": "Best results, but slow and few requests per minute possible",
-  "gemini-2.0-flash-description": "Faster results, but less accurate and more requests per minute possible",
-  "gemini-2.0-flash-lite-description": "Fastest results, but least accurate and most requests per minute possible",
-  "recommended": "Recommended"
+  "website": "Website"
 }
