feat(report): implement search functionality and no results state in report components #82

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -58,6 +58,7 @@
   "light": "Hell",
   "min": "min",
   "no-input-provided": "Keine Eingabe bereitgestellt",
+  "no-results-found": "Keine Ergebnisse gefunden",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "note": "Hinweis",
   "open-work": "Werk öffnen",
@@ -71,6 +72,7 @@
   "requests-per-minute": "Anfragen pro Minute",
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
+  "search": "Suche",
   "search-on-web": "Im Web suchen",
   "sec": "s",
   "side-panel": "Seitenleiste",
