--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -58,6 +58,7 @@
   "light": "Light",
   "min": "min",
   "no-input-provided": "No Input Provided",
+  "no-results-found": "No Results Found",
   "no-valid-dois-were-found": "No DOIs found",
   "note": "Note",
   "open-work": "Open Work",
@@ -71,6 +72,7 @@
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "resets-in": "Resets in approximately",
+  "search": "Search",
   "search-on-web": "Search on the Web",
   "sec": "sec",
   "side-panel": "Side Panel",
