feat: add gpt models #84

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -45,6 +45,7 @@
   "general": "Allgemein",
   "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension",
   "german": "Deutsch",
+  "gpt-4o-description": "Schnelles, intelligentes, flexibles GPT-Modell",
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hr": "h",
@@ -61,6 +62,7 @@
   "no-results-found": "Keine Ergebnisse gefunden",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "note": "Hinweis",
+  "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
   "open-work": "Werk öffnen",
   "pdf-file": "PDF-Datei",
   "popup": "Popup",
