--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -45,6 +45,7 @@
   "general": "General",
   "general-description": "Manage basic settings for the extension's functionality",
   "german": "German",
+  "gpt-4o-description": "Fast, intelligent, flexible GPT model",
   "help": "Help",
   "help-description": "Get support and helpful resources",
   "hr": "hr",
@@ -61,6 +62,7 @@
   "no-results-found": "No Results Found",
   "no-valid-dois-were-found": "No DOIs found",
   "note": "Note",
+  "o3-mini-description": "Fast, flexible, intelligent reasoning model",
   "open-work": "Open Work",
   "pdf-file": "PDF File",
   "popup": "Popup",
