feat: enhance DOI and ISSN tracking with registered/unregistered counts and update localization #83

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -67,6 +67,7 @@
   "pdf-file": "PDF-Datei",
   "popup": "Popup",
   "recommended": "Empfohlen",
+  "registered": "Registriert",
   "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
   "report": "Bericht",
   "requests-per-day": "Anfragen pro Tag",
@@ -86,6 +87,7 @@
   "theme-option-description": "Wählen Sie das Design der Erweiterung",
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "unregistered": "Nicht registriert",
   "upload-pdf": "PDF-Datei importieren",
   "usage": "Nutzung",
   "valid": "Gültig",
