--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -67,6 +67,7 @@
   "pdf-file": "PDF File",
   "popup": "Popup",
   "recommended": "Recommended",
+  "registered": "Registered",
   "reload-page-auto-import": "Reload the page to automatically import DOIs, or enter DOIs or a text containing DOIs",
   "report": "Report",
   "requests-per-day": "Requests per day",
@@ -86,6 +87,7 @@
   "theme-option-description": "Select the theme of the extension",
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "unregistered": "Unregistered",
   "upload-pdf": "Import PDF",
   "usage": "Usage",
   "valid": "Valid",
