feat: add metadata extraction route and integrate with AI services #8

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -57,6 +57,7 @@
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "learn-more": "Mehr erfahren",
   "light": "Hell",
+  "metadata": "Metadaten",
   "min": "min",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-results-found": "Keine Ergebnisse gefunden",
