--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -57,6 +57,7 @@
   "language-option-description": "Select the language of the extension",
   "learn-more": "Learn more",
   "light": "Light",
+  "metadata": "Metadata",
   "min": "min",
   "no-input-provided": "No Input Provided",
   "no-results-found": "No Results Found",
