feat: add GPT-4.1 nano model description to localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -45,6 +45,7 @@
   "general": "Allgemein",
   "general-description": "Verwalte grundlegende Einstellungen für die Funktionalität der Extension",
   "german": "Deutsch",
+  "gpt-4.1-nano-description": "Schnellstes, kostengünstigstes GPT-4.1-Modell",
   "gpt-4o-description": "Schnelles, intelligentes, flexibles GPT-Modell",
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
