--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -45,6 +45,7 @@
   "general": "General",
   "general-description": "Manage basic settings for the extension's functionality",
   "german": "German",
+  "gpt-4.1-nano-description": "Fastest, most cost-effective GPT-4.1 model",
   "gpt-4o-description": "Fast, intelligent, flexible GPT model",
   "help": "Help",
   "help-description": "Get support and helpful resources",
