feat: add auto-check references functionality and UI integration

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -15,9 +15,13 @@
   "api-key-valid": "Gültig",
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
+  "auto-check-references-description": "Referenzen werden automatisch extrahiert und geprüft, sobald Text eingefügt oder eine PDF importiert wird.",
+  "auto-check-references-info": "Die manuelle Prüfung über den Button bleibt weiterhin verfügbar.",
   "auto-import-dois": "DOIs automatisch importieren",
   "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
   "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
+  "auto-references-check": "Automatisch Referenzen prüfen",
+  "check": "Prüfen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
