--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -15,9 +15,13 @@
   "api-key-valid": "Valid",
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
+  "auto-check-references-description": "References are automatically extracted and checked as soon as text is pasted or a PDF is imported.",
+  "auto-check-references-info": "Manual checking via the button remains available.",
   "auto-import-dois": "Auto-import DOIs",
   "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
   "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
+  "auto-references-check": "Auto-check references",
+  "check": "check",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
