feat: update button text and placeholders for clarity in extraction and verification

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -21,7 +21,7 @@
   "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
   "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
   "auto-references-check": "Auto-check references",
-  "check": "check",
+  "extract-and-verify": "Extract and verify",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
@@ -54,7 +54,7 @@
   "help": "Help",
   "help-description": "Get support and helpful resources",
   "hr": "hr",
-  "insert-dois": "Enter DOIs or a text containing DOIs",
+  "insert-references": "Enter text containing references",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "language": "Language",
@@ -74,7 +74,7 @@
   "popup": "Popup",
   "recommended": "Recommended",
   "registered": "Registered",
-  "reload-page-auto-import": "Reload the page to automatically import DOIs, or enter DOIs or a text containing DOIs",
+  "reload-page-auto-import": "Reload the page to automatically find and import references",
   "remove-file-to-enable-text-input": "Remove file to enable text input",
   "report": "Report",
   "requests-per-day": "Requests per day",
