--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -21,7 +21,7 @@
   "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
   "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
-  "check": "Prüfen",
+  "extract-and-verify": "Extrahieren und Überprüfen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
@@ -54,7 +54,7 @@
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hr": "h",
-  "insert-dois": "DOIs oder einen Text mit DOIs eingeben",
+  "insert-references": "Text mit Referenzen eingeben",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "language": "Sprache",
@@ -74,7 +74,7 @@
   "popup": "Popup",
   "recommended": "Empfohlen",
   "registered": "Registriert",
-  "reload-page-auto-import": "Seite neu laden, um DOIs automatisch zu importieren, oder DOIs bzw. einen Text mit DOIs eingeben.",
+  "reload-page-auto-import": "Seite neu laden, um Referenzen automatisch zu finden und zu importieren",
   "remove-file-to-enable-text-input": "Datei entfernen, um die Texteingabe zu aktivieren",
   "report": "Bericht",
   "requests-per-day": "Anfragen pro Tag",
