feat: enhance tooltip functionality and update localization for reference counts

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -21,7 +21,6 @@
   "auto-import-dois-description": "Wenn diese Option aktiviert ist, werden DOIs automatisch auf der geöffneten Seite erkannt und importiert",
   "auto-import-dois-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
-  "extract-and-verify": "Extrahieren und Überprüfen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
@@ -40,9 +39,13 @@
   "download-report-pdf": "Bericht als PDF herunterladen",
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
+  "error": "Fehler",
+  "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
+  "extract-and-verify": "Extrahieren und Überprüfen",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "found": "Gefunden",
+  "found-references-tooltip": "Alle im Text erkannten Referenzen",
   "gemini-2.0-flash-description": "Schnellere Ergebnisse, aber weniger genau und mehr Anfragen pro Minute möglich",
   "gemini-2.0-flash-lite-description": "Schnellste Ergebnisse, aber am wenigsten genau und die meisten Anfragen pro Minute möglich",
   "gemini-2.5-pro-description": "Beste Ergebnisse, aber langsam und wenige Anfragen pro Minute möglich",
@@ -95,10 +98,14 @@
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
   "unregistered": "Nicht registriert",
+  "unverified": "Nicht verifiziert",
+  "unverified-references-tooltip": "Referenzen, die keiner Quelle zugeordnet werden konnten",
   "upload-pdf": "PDF-Datei importieren",
   "usage": "Nutzung",
   "valid": "Gültig",
   "valid-description": "Gültig",
+  "verified": "Verifiziert",
+  "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
