--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -21,7 +21,6 @@
   "auto-import-dois-description": "DOIs are automatically detected and imported on the open page",
   "auto-import-dois-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
   "auto-references-check": "Auto-check references",
-  "extract-and-verify": "Extract and verify",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
@@ -40,9 +39,13 @@
   "download-report-pdf": "Download report as PDF",
   "english": "English",
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
+  "error": "Error",
+  "error-references-tooltip": "References that could not be verified due to a technical error",
+  "extract-and-verify": "Extract and verify",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "found": "Found",
+  "found-references-tooltip": "All references recognized in the text",
   "gemini-2.0-flash-description": "Faster results, but less accurate and more requests per minute possible",
   "gemini-2.0-flash-lite-description": "Fastest results, but least accurate and most requests per minute possible",
   "gemini-2.5-pro-description": "Best results, but slow and few requests per minute possible",
@@ -95,10 +98,14 @@
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
   "unregistered": "Unregistered",
+  "unverified": "Unverified",
+  "unverified-references-tooltip": "References that could not be matched to a source",
   "upload-pdf": "Import PDF",
   "usage": "Usage",
   "valid": "Valid",
   "valid-description": "Valid",
+  "verified": "Verified",
+  "verified-references-tooltip": "References that were successfully matched to a source",
   "view-demo": "View a demonstration of how to use the extension",
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
