feat: update localization for reference input prompts and improve template structure

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -39,6 +39,7 @@
   "download-report-pdf": "Download report as PDF",
   "english": "English",
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
+  "enter-references": "Please enter a text or import a PDF containing references to verify them",
   "error": "Error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
   "extract-and-verify": "Extract and verify",
@@ -57,7 +58,7 @@
   "help": "Help",
   "help-description": "Get support and helpful resources",
   "hr": "hr",
-  "insert-references": "Enter text containing references",
+  "insert-references": "Text containing references",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "language": "Language",
