--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -39,6 +39,7 @@
   "download-report-pdf": "Bericht als PDF herunterladen",
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
+  "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
   "error": "Fehler",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
   "extract-and-verify": "Extrahieren und Überprüfen",
@@ -57,7 +58,7 @@
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hr": "h",
-  "insert-references": "Text mit Referenzen eingeben",
+  "insert-references": "Text mit Referenzen",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "language": "Sprache",
