feat: add SearchAndVerifyState component and related localization updates

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -89,6 +89,8 @@
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
   "search": "Suche",
+  "search-and-verify": "Suche und Überprüfung",
+  "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen",
   "search-on-web": "Im Web suchen",
   "sec": "s",
   "side-panel": "Seitenleiste",
