feat: update localization for 'open-work' to 'open-source' in English and German

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -75,7 +75,7 @@
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "note": "Hinweis",
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
-  "open-work": "Werk öffnen",
+  "open-source": "Quelle öffnen",
   "pdf-file": "PDF-Datei",
   "popup": "Popup",
   "recommended": "Empfohlen",
@@ -90,7 +90,7 @@
   "resets-in": "Wird zurückgesetzt in ca.",
   "search": "Suche",
   "search-and-verify": "Suche und Überprüfung",
-  "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen",
+  "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen...",
   "search-on-web": "Im Web suchen",
   "sec": "s",
   "side-panel": "Seitenleiste",
