--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -75,7 +75,7 @@
   "no-valid-dois-were-found": "No DOIs found",
   "note": "Note",
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
-  "open-work": "Open Work",
+  "open-source": "Open Source",
   "pdf-file": "PDF File",
   "popup": "Popup",
   "recommended": "Recommended",
@@ -90,7 +90,7 @@
   "resets-in": "Resets in approximately",
   "search": "Search",
   "search-and-verify": "Search and Verify",
-  "search-and-verify-description": "Searching for matching sources and verifying references",
+  "search-and-verify-description": "Searching for matching sources and verifying references...",
   "search-on-web": "Search on the Web",
   "sec": "sec",
   "side-panel": "Side Panel",
